add drag n drop

--- a/index.html
+++ b/index.html
@@ -18,16 +18,7 @@
                     <h1 class="title">Любимые книги</h1>
                     <div class="book-management favorite-books">
                         <div class="favorite-books__container js__favorite-books">
-                            <div class="favorite-books__item book">
-                                <h2 class="book__title">Book number</h2>
 
-                                <div class="book__buttons-container">
-                                    <button class="book__button book__edit-button">Ред.</button>
-                                    <button class="book__button book__done-button">Прочитал</button>
-                                    <button class="book__button book__read-button">Читать</button>
-                                    <button class="book__button book__delete-button">Х</button>
-                                </div>
-                            </div>
                         </div>
                         <div class="book__drop-dawn-area favorite-books__drop-dawn-area js__favorite-books-drop">drop down area</div>
                     </div>
@@ -70,6 +61,18 @@
 
 
 <!--<div class="books-list__item book">-->
+<!--    <h2 class="book__title">Book number</h2>-->
+
+<!--    <div class="book__buttons-container">-->
+<!--        <button class="book__button book__edit-button">Ред.</button>-->
+<!--        <button class="book__button book__done-button">Прочитал</button>-->
+<!--        <button class="book__button book__read-button">Читать</button>-->
+<!--        <button class="book__button book__delete-button">Х</button>-->
+<!--    </div>-->
+<!--</div>-->
+
+
+<!--<div class="favorite-books__item book">-->
 <!--    <h2 class="book__title">Book number</h2>-->
 
 <!--    <div class="book__buttons-container">-->
